# progset1

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  graphs.cpp  graphs.hpp  helpers.cpp  helpers.hpp  main.cpp
latex/: main.bbl  main.bib  main.sty  main.tex
